// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CandidateCard should render banner text correctly with given strings 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ForwardRef(WithStyles)
    list={
      Array [
        "one",
        "two",
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "classes": Object {
        "RoomIcon": "CandidateDetailsCard-RoomIcon-10",
        "availability": "CandidateDetailsCard-availability-9",
        "avatar": "CandidateDetailsCard-avatar-7",
        "candidateAbout": "CandidateDetailsCard-candidateAbout-3",
        "card": "CandidateDetailsCard-card-6",
        "companyName": "CandidateDetailsCard-companyName-4",
        "heading": "CandidateDetailsCard-heading-2",
        "lang": "CandidateDetailsCard-lang-8",
        "media": "CandidateDetailsCard-media-1",
        "responsibilities": "CandidateDetailsCard-responsibilities-5",
      },
      "list": Array [
        "one",
        "two",
      ],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "classes": Object {
          "RoomIcon": "CandidateDetailsCard-RoomIcon-10",
          "availability": "CandidateDetailsCard-availability-9",
          "avatar": "CandidateDetailsCard-avatar-7",
          "candidateAbout": "CandidateDetailsCard-candidateAbout-3",
          "card": "CandidateDetailsCard-card-6",
          "companyName": "CandidateDetailsCard-companyName-4",
          "heading": "CandidateDetailsCard-heading-2",
          "lang": "CandidateDetailsCard-lang-8",
          "media": "CandidateDetailsCard-media-1",
          "responsibilities": "CandidateDetailsCard-responsibilities-5",
        },
        "list": Array [
          "one",
          "two",
        ],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
}
`;

exports[`CandidateCard should render correctly with no props 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ForwardRef(WithStyles) />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "classes": Object {
        "RoomIcon": "CandidateDetailsCard-RoomIcon-10",
        "availability": "CandidateDetailsCard-availability-9",
        "avatar": "CandidateDetailsCard-avatar-7",
        "candidateAbout": "CandidateDetailsCard-candidateAbout-3",
        "card": "CandidateDetailsCard-card-6",
        "companyName": "CandidateDetailsCard-companyName-4",
        "heading": "CandidateDetailsCard-heading-2",
        "lang": "CandidateDetailsCard-lang-8",
        "media": "CandidateDetailsCard-media-1",
        "responsibilities": "CandidateDetailsCard-responsibilities-5",
      },
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "classes": Object {
          "RoomIcon": "CandidateDetailsCard-RoomIcon-10",
          "availability": "CandidateDetailsCard-availability-9",
          "avatar": "CandidateDetailsCard-avatar-7",
          "candidateAbout": "CandidateDetailsCard-candidateAbout-3",
          "card": "CandidateDetailsCard-card-6",
          "companyName": "CandidateDetailsCard-companyName-4",
          "heading": "CandidateDetailsCard-heading-2",
          "lang": "CandidateDetailsCard-lang-8",
          "media": "CandidateDetailsCard-media-1",
          "responsibilities": "CandidateDetailsCard-responsibilities-5",
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
}
`;
